# Jsonic

./: .gitignore  .pre-commit-config.yaml  README.md  docker-compose.yml  go.mod  main.go  pyproject.toml  python.Dockerfile  setup.cfg  test_rpc_client.py  test_rpc_server.py
.github/workflows/: build_and_deploy.yml  build_and_test.yml  pull_request.yml
RabbitMQ/: docker-compose.yml  test_rpc_client.py  test_rpc_server.py
ansible/: jsonic_deploy.yml  vars.yml
api/: Dockerfile  app.py  loader.py  python.Dockerfile
api/data/: config.py
api/handlers/: __init__.py
api/handlers/admins/: message_to_all.py
api/handlers/errors/: error_handler.py
api/handlers/users/: __init__.py  start.py
api/middlewares/: throttling.py
api/utils/: notify_admins.py
